findbugs warnings (Integer.valueOf() instead of new Integer(), toString on array, string comparing)